--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allergenenkaart</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head> 
 <body>
 
@@ -484,7 +484,7 @@
         <p>Copyright 2025</p>
     </div>
 
-    <script src="{{ url_for('static', filename='js/filters.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/time-filter.js') }}"></script>
+    <script src="/static/js/filters.js"></script>
+    <script src="/static/js/time-filter.js"></script>
 </body>
 </html>
